# Imprementation_of_IKERUKANA

./: README.md
maps/: README.md  generated_10*10map.csv  generated_20*20map.csv  generated_30*30map.csv  ktbdmr_map.csv  ktbdmr_map_with_2players.csv
src/: main.cpp
src/MapGenerator/: main.cpp
src/Solver/: CMakeLists.txt  ikerukanaDPSolver.cpp  ikerukanaDPSolver.hpp  ikerukanaSuperDPSolver.cpp  solver_util.hpp
src/Solver/IkerukanaWithBonbiDPSolver/: CMakeLists.txt  IkerukanaWithBonbiDPSolver.cpp  IkerukanaWithBonbiDPSolver.hpp
src/Solver/IkerukanaWithBonbiSolver/: CMakeLists.txt  IkerukanaWithBonbiSolver.cpp  IkerukanaWithBonbiSolver.hpp
src/Solver/NormalIkerukanaDPSolver/: CMakeLists.txt  NormalIkerukanaDPSolver.cpp  NormalIkerukanaDPSolver.hpp
src/Solver/NormalIkerukanaSolver/: CMakeLists.txt  NormalIkerukanaSolver.cpp  NormalIkerukanaSolver.hpp
test/ikerukana/: CMakeLists.txt  ikerukana_test.cpp
test/ikerukana/ikerukana_with_BONBI/: CMakeLists.txt  ikerukana_with_BONBI_test.cpp
test/ikerukana_with_BONBI/: CMakeLists.txt  ikerukana_with_BONBI_test.cpp
test/normal_ikerukana/: CMakeLists.txt  normal_ikerukana_test.cpp
